Fixed Hero hiding behind the navbar

--- a/src/Components/Hero.scss
+++ b/src/Components/Hero.scss
@@ -78,7 +78,7 @@
 
 @media screen and (max-width: 600px) {
     .container
-    {
+    {   padding-top: 10vh;
         padding-left: 0;
         width: 100%;
     }
